--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.19.2",
+    "firebase": "^12.4.0",
     "firebase-admin": "^12.5.0",
     "morgan": "^1.10.0",
     "uuid": "^9.0.1"
