--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,7 +1,7 @@
 # ignore environment and keys
 .env
-firebase-key.json
-serviceAccount.json
+.env.local
+.env*.local
 
 # ignore build artifacts
 node_modules/
