--- a/frontend/.env
+++ b/frontend/.env
@@ -1,8 +1,8 @@
-VITE_API_URL=http://localhost:4000
+VITE_API_URL=http://localhost:4000/
 
-VITE_FIREBASE_API_KEY=YOUR_KEY
-VITE_FIREBASE_AUTH_DOMAIN=YOUR_PROJECT.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=YOUR_PROJECT
-VITE_FIREBASE_STORAGE_BUCKET=YOUR_PROJECT.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=XXXX
-VITE_FIREBASE_APP_ID=1:XXXX:web:YYYY
+VITE_FIREBASE_API_KEY=AIzaSyDRZkBiEk4xSY7GLuSasKUCd1BtllBGpmk
+VITE_FIREBASE_AUTH_DOMAIN=dessert-engineers.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=dessert-engineers
+VITE_FIREBASE_STORAGE_BUCKET=dessert-engineers.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=972359762647
+VITE_FIREBASE_APP_ID=1:972359762647:web:9e65a2f0be9ca9b1876692
