--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "dotenv": "^17.2.3"
   },
   "devDependencies": {
+    "husky": "^9.1.7",
     "jest": "^30.2.0"
+  },
+  "scripts": {
+    "prepare": "husky"
   }
 }
